syntax = "proto3";

package test.aip.v1;

import "codegen/aip/v1/aip.proto";
import "codegen/model/v1/model.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/malonaz/core/genproto/test/aip";

// MyEnum is a test enum for filter validation.
enum MyEnum {
  // Unspecified enum.
  MY_ENUM_UNSPECIFIED = 0;
  // Some specified value.
  MY_ENUM_VALUE = 1;
}

// A nullable enum.
enum MyNullableEnum {
  // Default value.
  MY_NULLABLE_ENUM_UNSPECIFIED = 0;
}

// ListResourcesRequest2 tests wildcard path filtering.
message ListResourcesRequest2 {
  option (malonaz.core.codegen.aip.v1.pagination) = {default_page_size: 100};
  option (malonaz.core.codegen.aip.v1.filtering) = {
    paths: [
      "id",
      "nested.*",
      "nested2.further_nested.*"
    ]
  };

  // A filter.
  string filter = 1;
  // A page size.
  int32 page_size = 2;
  // A page token.
  string page_token = 3;
}

// ListResourcesRequest tests list operation with filters, ordering, and aliases.
message ListResourcesRequest {
  option (malonaz.core.codegen.aip.v1.pagination) = {default_page_size: 1000};
  option (malonaz.core.codegen.aip.v1.ordering) = {
    paths: ["*"]
    default: "create_timestamp desc"
  };
  option (malonaz.core.codegen.aip.v1.filtering) = {
    paths: ["*"]
  };

  // Filter expression for resources.
  string filter = 1;
  // Maximum number of resources to return.
  int32 page_size = 2;
  // Pagination token from previous response.
  string page_token = 3;
  // Ordering clause for results.
  string order_by = 4;
}

// PaginateOnlyRequest tests pagination in isolation.
message PaginateOnlyRequest {
  option (malonaz.core.codegen.aip.v1.pagination) = {default_page_size: 50};

  // Maximum number of resources to return.
  int32 page_size = 1;
  // Pagination token from previous response.
  string page_token = 2;
}

// PaginateWithSmallDefaultRequest tests small page sizes.
message PaginateWithSmallDefaultRequest {
  option (malonaz.core.codegen.aip.v1.pagination) = {default_page_size: 10};

  // Maximum number of resources to return.
  int32 page_size = 1;
  // Pagination token from previous response.
  string page_token = 2;
}

// Resource is a test message with nested fields.
message Resource {
  // some id field.
  string id = 1;
  // some timestmap.
  int64 create_timestamp = 20;
  // some other timestamp.
  int64 update_timestamp = 21;

  // Simple string field.
  string field1 = 2;
  // Nested resource for path mapping tests.
  NestedResource nested = 3 [(malonaz.core.codegen.model.v1.field_opts).as_json_bytes = true];
  // Second nested resource for full object updates.
  NestedResource nested2 = 4 [(malonaz.core.codegen.model.v1.field_opts).as_json_bytes = true];
  // Third nested resource for multi-column mapping.
  NestedResource nested3 = 5;
  // Fourth nested resource for wildcard mapping.
  NestedResource nested4 = 6;
  // Enum field for filter testing.
  MyEnum my_enum = 7;
  // Some boolean field.
  bool deleted = 8;
  // Nullable enum.
  MyNullableEnum nullable_enum = 10 [(malonaz.core.codegen.model.v1.field_opts).nullable = true];
  // A field with a column name change.
  int64 column_name_changed = 11 [(malonaz.core.codegen.model.v1.field_opts).column_name = "new_name"];
}

// NestedResource contains fields for testing nested path updates.
message NestedResource {
  // Boolean field.
  bool field1 = 1;
  // Integer field for selective updates.
  int64 field2 = 2;
  // String field.
  string field3 = 3;
  // Another nested resource.
  DeeplyNestedResource further_nested = 4;
}

// Deeply nested resource.
message DeeplyNestedResource {
  // Boolean field.
  bool field1 = 1;
  // Integer field for selective updates.
  int64 field2 = 2;
  // String field.
  string field3 = 3;
}

// UpdateResourceRequest tests field mask with path mappings and authorization.
message UpdateResourceRequest {
  option (malonaz.core.codegen.aip.v1.update) = {
    path_mappings: [
      {
        from: "field1"
        to: ["field_one"]
      },
      {
        from: "nested.field2"
        to: ["nested_field_two"]
      },
      {
        from: "nested2"
        to: ["nested2"]
      },
      {
        from: "nested4.*"
        to: ["nested4_jsonb"]
      },
      {
        from: "nested3"
        to: [
          "field1",
          "field1",
          "field2"
        ]
      }
    ]
    authorized_paths: [
      {path: "field1"},
      {path: "nested.field2"},
      {path: "nested2"},
      {path: "nested"},
      {path: "nested4.field1"},
      {path: "nested4.field3"},
      {path: "nested3"}]
  };

  // Resource to update.
  Resource resource = 1;
  // Field mask specifying which fields to update.
  google.protobuf.FieldMask update_mask = 2;
}

// UpdateResource2Request tests default paths with authorized paths.
message UpdateResource2Request {
  option (malonaz.core.codegen.aip.v1.update) = {
    default_paths: ["field1"]
    authorized_paths: [
      {path: "nested"},
      {path: "nested2"}]
  };

  // Resource to update.
  Resource resource = 1;
  // Field mask specifying which fields to update.
  google.protobuf.FieldMask update_mask = 2;
}
